--- a/index.html
+++ b/index.html
@@ -1,1 +1,46 @@
+<!DOCTYPE html>
+<!-- Name: Sarvanjeet Singh, Student Number:C0701532  -->
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Exergen Corporation</title>
+    <link rel="stylesheet" href="css/styles.css">
+</head>
+<body>
+    <header>
+        <img src="images/exergen_corporation_logo.jfif" alt="Thermometers Banner" width="300" height="150">
+    </header>
 
+    <nav>
+        <a href="index.html"><img src="images/images.jfif" alt="Thermometers Logo" width="50" height="50"></a>
+        <a href="index.html">Home</a> &nbsp; &nbsp;
+        <a href="about.html">About</a> &nbsp; &nbsp;
+        <a href="team.html">Our Team</a> &nbsp; &nbsp;
+        <a href="specials.html">Specials</a> &nbsp; &nbsp;
+        <a href="training.html">Training</a> &nbsp; &nbsp;
+        <a href="media.html">Media</a> &nbsp; &nbsp;
+        <a href="faqs.html">FAQs</a> &nbsp; &nbsp;
+        <a href="contact.html">Contact Us</a>
+    </nav>
+
+    <!-- Main content for the homepage -->
+    <main>
+        <h1>Welcome to Exergen Corporation</h1>
+        <p>Providing you with accurate, reliable, and quality thermometers for every need.</p>
+        <img src="images/images (1).jfif" alt="Various Thermometers" width="400" height="300">
+        <img src="images/checkboard4-600x600.jpg" alt="Various Thermometers" width="400" height="300">
+        <img src="images/Exergen-TAT5000S-486x486.webp" alt="Various Thermometers" width="400" height="300">
+        <img src="images/images (2).jfif" alt="Various Thermometers" width="400" height="300">
+        <img src="images/images (3).jfif" alt="Various Thermometers" width="400" height="300">
+        <img src="images/images (4).jfif" alt="Various Thermometers" width="400" height="300">
+    </main>
+
+    <!-- Footer with copyright, contact, and your info -->
+    <footer>
+        &copy; Copyright 2099. All Rights Reserved.<br>
+        <a href="mailto:info@exergencorporation.com">Request information</a><br>
+        Sarvanjeet Singh &nbsp; &nbsp; Student Number: C0701532
+    </footer>
+</body>
+</html>
